# gallery

./: .gitignore  README.md  README.txt  gallery.cabal  release.sh  stack.yaml
app/: Gallery.hs  Shapes.hs  Types.hs
app/shaders/chunkRender/: calcAO.frag  calcFresnel.frag  calcLamb.frag  calcNormal.frag  calcSpec.frag  disform.frag  fNoise.frag  fogColor.frag  hsv.frag  noise.frag  opCheapBend.frag  opRep.frag  opS.frag  opU.frag  sdBox.frag  sdCappedCone.frag  sdCappedCylinder.frag  sdHexPrism.frag  sdPlane.frag  sdSphere.frag  sdTorus.frag  smoothU.frag  stepIntersect.frag  xrotate.frag  yrotate.frag  zrotate.frag
app/shaders/chunks/: calcAO.glsl  calcIntersection.glsl  opRepSphere.glsl  opS.glsl  rotateY.glsl  rotateZ.glsl  sdCappedCone.glsl  sdPlane.glsl  smoothU.glsl  translate.glsl
app/shaders/paintings/: cubeAndSpheres.Frag  hexAndGoo.frag  owlex.frag  reflectSpheres.frag  spectacles.frag  tunnel1.frag  tunnel2.frag
app/shaders/sculptures/: bubbles.frag  cubeSubField.frag  fieldSub.frag  pit.frag  tessel.frag  weirdHoles1.frag
app/shaders/world/: frame.frag  pedestal.frag  pedestal.vert  room.frag  room.vert
gallery-r/app/: Gallery.hs
gallery-r/app/shaders/chunks/: hsv.glsl  opRepBox.glsl  opU.glsl  rotateX.glsl  sdCapsule.glsl  sdSphere.glsl  sdTorus.glsl  smax.glsl  smin.glsl  smin_2_3.glsl  triNoise3D.glsl  udRoundBox.glsl
gallery-r/app/shaders/paintings/: redRing.frag  sphereField.frag  tree.frag
gallery-r/app/shaders/sculptures/: bubbles.frag  fieldSub.frag  tesselSphere.frag  weirdHoles1.frag
gallery-r/app/shaders/template/: fogStep.frag
(+1 files in other folders)
