name:                gallery
version:             0.1.0.0
synopsis:            Discoverable Voice Painting
description:         See Readme
homepage:            http://github.com/cabbibo/gallery
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini / Isaac Cohen
maintainer:          who@tree.is
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Flag UseOculusSDK
  Description: Enable direct Oculus SDK support (rather than via SteamVR)
  Default:     False


executable gallery
  hs-source-dirs:      app
  main-is:             Gallery.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-pal
                     , glfw-pal
                     , gl-pal
                     , game-pal
                     , gl
                     , linear-extra
                     , mtl
                     , lens-extra
                     , halive
                     , random
                     , containers
                     , MonadRandom
                     , time
                     , lens
                     , linear
                     , split

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/cabbibo/gallery
